--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family:'Montserrat';
+}
+
+.container{
+  background:rgb(65, 65, 192);
+  margin:5rem auto;
+  width:20rem;
   text-align: center;
+  height:25rem;
+  border-radius: 1rem;
+  box-shadow: 0 2.5px 7px 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  padding-top:10px;
+  color:white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  margin-top:8rem;
+  font-size:1.7rem;
+  color:white;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-div{
+  display:flex;
+  margin:8rem auto;
+  width:60%;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  width:50px;
+  height:50px;
+  border-radius: 2rem;
+  border:none;
+  font-size:1.3rem;
+  box-shadow:0 0.5px 5px 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active{
+  border:0.5px solid black;
+}
+.btn-mais{
+  background:rgb(0, 209, 52);
+}
+.btn-menos{
+  background-color: rgb(255, 60, 60);
 }
